ClaimFlow/force-app/main/default/objects/Claim__c/fields/Amount_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Claimed__c</fullName>
    <label>Amount Claimed</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>