ClaimFlow/force-app/main/default/objects/Claim__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Text</type>
    <length>120</length>
    <description>Team assigned by the AssignmentService based on claim type and severity.</description>
</CustomField>