ClaimFlow/force-app/main/default/objects/Claim__c/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Auto</fullName><default>true</default><label>Auto</label></value>
            <value><fullName>Property</fullName><default>false</default><label>Property</label></value>
            <value><fullName>Health</fullName><default>false</default><label>Health</label></value>
            <value><fullName>Liability</fullName><default>false</default><label>Liability</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>