ClaimFlow/force-app/main/default/objects/Claim__c/fields/Is_Stalled__c.field-meta.xml
<CustomField>
    <fullName>Is_Stalled__c</fullName>
    <label>Is Stalled</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Set by the StageAgingBatch when a claim sits too long in one stage.</description>
</CustomField>