ClaimFlow/force-app/main/default/objects/Claim__c/fields/Reserve_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Amount__c</fullName>
    <label>Reserve Amount</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>0</scale>
    <description>Computed from claim type factor and severity by the ReserveService.</description>
</CustomField>