ClaimFlow/force-app/main/default/objects/Claim__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <description>Governed by the state machine (Stage_Transition__mdt).</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>FNOL</fullName><default>true</default><label>FNOL</label></value>
            <value><fullName>Investigation</fullName><default>false</default><label>Investigation</label></value>
            <value><fullName>Approval</fullName><default>false</default><label>Approval</label></value>
            <value><fullName>Settlement</fullName><default>false</default><label>Settlement</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>