ClaimFlow/force-app/main/default/objects/Claim__c/fields/Stage_Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Stage_Changed_At__c</fullName>
    <label>Stage Changed At</label>
    <type>DateTime</type>
    <description>When the claim last entered its current stage.</description>
</CustomField>